# project_energen

./: .gitattributes  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
data/: energy.csv
models/: energen_sarima_auto_config.json  energen_sarima_auto_model.joblib  energen_scaler.joblib
notebooks/: notebook.ipynb  script.py
src/project_energen/: config.py  predict.py  train.py  utils.py
